# bazel-test

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod
foo/cmd/foo/: BUILD.bazel  main.go  model.proto
